--- a/src/components/resume/resume.css
+++ b/src/components/resume/resume.css
@@ -87,3 +87,13 @@
 .resume__description {
   margin-block: 20px 30px;
 }
+
+@media screen and (max-width: 768px) {
+  .resume__container {
+    grid-template-columns: 1fr;
+  }
+
+  .resume__item:not(:first-child) {
+    border-right: none;
+  }
+}
