Enhance animations and modernize color scheme

--- a/src/components/resume/resume.css
+++ b/src/components/resume/resume.css
@@ -56,6 +56,10 @@
   transition: all 1.2s var(--transition);
 }
 
+.is-open .resume__icon {
+  transform: rotate(45deg);
+}
+
 .resume__content {
   padding-inline: 30px 50px;
   max-height: 0;
