--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -99,6 +99,7 @@
   border-radius: 50%;
   position: relative;
   overflow: hidden;
+  animation: float 6s ease-in-out infinite;
 }
 
 .home__profile {
@@ -206,5 +207,17 @@
   .home__data {
     width: 160px;
     height: 50px;
+  }
+}
+
+@keyframes float {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+  100% {
+    transform: translateY(0);
   }
 }
